Change the storing method in Backendless; instead of single records, use only a JSON per user (avoiding too much API calls)

--- a/src/styles.css
+++ b/src/styles.css
@@ -124,7 +124,7 @@ footer {
   border: 0.3rem dotted #1c1c1c;
   padding: 15px;
   width: 100%;
-  height: 30vh;
+  height: 20vh;
   word-wrap: break-word;
 }
 
@@ -135,7 +135,7 @@ footer {
   }
 }
 
-@media (min-width: 601px) and (max-width: 800px) {
+@media (min-width: 601px) and (max-width: 900px) {
   .action {
     width: 60vh;
     height: fit-content;
